Small punctuation fixes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ This is a MSc course group project from the Data Analytics module at Queen Mary 
 
 <p>We love machine learning, big data and sports. When you combine them what do you get? - Sports Analytics.
 We build this team not only with the idea to get a good note for the degree, but to learn, improve and challenge ourselves.
-Here we are</p>
+Here we are:</p>
 
 <ul>
 <li>Yuan-Yi Chang</li>
@@ -64,7 +64,7 @@ Here we are</p>
 
 <p>We would like to thank our teachers and instructors at QMUL.<br>
 We are grateful for the patience and support of our families and loved ones.<br>
-We appreciate the work and effort of Ken Pomeroy <a href="http://kenpom.com/">kenpom.com/</a> and <a href="https://www.kaggle.com/c/march-machine-learning-mania-2017">Kaggle</a>.</p>
+We appreciate the work and effort of Ken Pomeroy <a href="http://kenpom.com/">kenpom.com</a> and <a href="https://www.kaggle.com/c/march-machine-learning-mania-2017">Kaggle</a>.</p>
         </section>
 
         <aside id="sidebar">
